--- a/admin/package.json
+++ b/admin/package.json
@@ -6,15 +6,22 @@
   "scripts": {
     "dev": "next -p 3001",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "standard"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^7.0.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "babel-plugin-transform-define": "^1.3.1",
+    "dotenv": "^8.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^9.0.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "semantic-ui-react": "^0.83.0"
+  },
+  "devDependencies": {
+    "standard": "^13.1.0"
   }
 }
