--- a/admin/.env.example
+++ b/admin/.env.example
@@ -1,3 +1,9 @@
 // SPOTIFY
 SPOTIFY_CLIENT_ID=
 SPOTIFY_REDIRECT_URI=
+
+// AUTH0
+AUTH0_DOMAIN=
+AUTH0_CLIENT_ID=
+AUTH0_API_AUDIENCE=
+AUTH0_REDIRECT_URI=
