--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth0-js": "^9.11.3",
     "dotenv": "^8.0.0",
     "isomorphic-fetch": "^2.2.1",
     "next": "^9.0.3",
